# papi

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build.yml
endstone_papi/: __init__.py  _chars_replacer.py  _papi.cpp  _papi.pyi  _plugin.py  _service.py  chars_replacer.py  papi.py  plugin.py  pypapi.cpp  pypapi.py  pypapi.pyi
examples/cpp/: CMakeLists.txt  plugin.cpp
examples/python/: pyproject.toml
examples/python/endstone_papi_pyexample/: __init__.py  plugin.py
include/endstone_papi/: papi.h  plugin.h
include/endstone_papi/details/: plugin.h
src/: plugin.cpp
